2011-11-12 Charles Suprin <hamaa1vs at gmail.com>

    * doc/um/gpredict-user-manual.odt
    Update user manual for GPSD and other features.


2011-11-06 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-sat-map.c
    Add comments.


2011-11-05 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-polar-view.c
    Remove memory leak.


2011-11-03 Charles Suprin <hamaa1vs at gmail.com>

    * src/qth-data.c
    Maintain Maidenhead grid (length 4 characters) for qth in qra field.


2011-10-29 Charles Suprin <hamaa1vs at gmail.com>

    * data/trsp/37841.trsp
    Move SRVMU to correct catalog number.

    * data/trsp/37841.trsp
    Add transponder data for JUGNU.

    * src/gtk-event-list-popup.c
    * src/gtk-sat-list-popup.c
    * src/gtk-sat-map-popup.c
    * src/gtk-polar-view-popup.c
    * src/gtk-single-sat.c
    * NEWS
    Add current pass menuitem to popups. (Bug 3292729: Show next pass shows the current pass.)


2011-10-28 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-sat-popup-common.c
    * src/gtk-sat-popup-common.h
    * src/gtk-sat-map-popup.c
    Attempt to resolve "Show next pass shows the current pass".

2011-10-27 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-event-list-popup.c
    * src/gtk-sat-list-popup.c
    * src/gtk-sat-map-popup.c
    * src/gtk-polar-view-popup.c
    * src/gtk-sat-popup-common.c
    * src/gtk-sat-popup-common.h
    * src/gtk-single-sat.c
    * src/Makefile.am
    Consolidate popup callback functions into single function and file.	


2011-10-26 Charles Suprin <hamaa1vs at gmail.com>

    * src/tle-update.c
    Read .sat files only when there is data to compare.

    * src/tle-update.c
    Restructure satellite name test and add "OBJECT A" name type to list for replacement.


2011-10-23 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-sat-map-groundtrack.c
    Use more robust check on orbit change time.

    * src/gtk-rig-ctrl.c
    * src/sat-debugger.c
    * src/sat-pref.c
    * src/sat-log-browser.c