@@ -65,7 +65,7 @@ static void destroy_rotctrl  (GtkWidget *window, gpointer data);
 static void destroy_rigctrl  (GtkWidget *window, gpointer data);
 static void destroy_skg      (GtkWidget *window, gpointer data);
 static gint window_delete    (GtkWidget *widget, GdkEvent *event, gpointer data);
-
+static sat_nickname_compare (sat_t *a, sat_t *b);
 
 
 /** \brief Create and run GtkSatModule popup menu.
@@ -157,7 +157,9 @@ void gtk_sat_module_popup (GtkSatModule *module)
     satsubmenu = gtk_menu_new();
     gtk_menu_item_set_submenu(GTK_MENU_ITEM(menuitem), satsubmenu);
     
-    sats = g_hash_table_get_values(module->satellites);  // FIXME: sort list
+    sats = g_hash_table_get_values(module->satellites);  
+    sats = g_list_sort(sats , sat_nickname_compare );
+
     n = g_list_length(sats);
     for (i = 0; i < n; i++) {
         sat = SAT(g_list_nth_data(sats, i));
@@ -1229,4 +1231,8 @@ gboolean module_window_config_cb (GtkWidget *widget, GdkEventConfigure *event, g
 
     /* continue to handle event normally */
     return FALSE;
+}
+
+static sat_nickname_compare (sat_t *a, sat_t *b) {
+    gpredict_strcmp(a->nickname, b->nickname);
 }
